--- a/ReadableTypeNames/ReadableTypeNames/ReadableTypeNames.csproj
+++ b/ReadableTypeNames/ReadableTypeNames/ReadableTypeNames.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>BanallyMe.ReadableTypeNames</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>BanallyMe</Authors>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Description>.NET library to provide extensions to the .Net Type System.Type to produce a readable Typename-string.</Description>
     <Copyright>2020 BanallyMe</Copyright>
     <NeutralLanguage>en</NeutralLanguage>
@@ -18,14 +18,9 @@
     <TargetFrameworks>netstandard2.1;netstandard2.0;netstandard1.3</TargetFrameworks>
     <Nullable>Enable</Nullable>
     <LangVersion>8.0</LangVersion>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
     <NoWarn>CA1303;</NoWarn>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
 
 </Project>
